--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.5",
+    "jquery": "^3.7.1",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
